--- a/senguo.cc/admin/templates/customer/address.html
+++ b/senguo.cc/admin/templates/customer/address.html
@@ -47,14 +47,14 @@
                     <input type="tel" class="name-ipt input1" id="address_phone" placeholder="请输入手机号" value=""/>
                     <span class="modal-left">电话：</span>
                 </p>
-                <p class="row-address mb6">
+                <!--<p class="row-address mb6">
                     <select class="selsect-area ml2" id="address_city">
                         <option value="请选择">请选择</option>
                     </select>
                     <select class="selsect-area" id="address_province">
                     </select>
                     <span class="modal-left">选择省市：</span>
-                </p>
+                </p>-->
                 <p class="row-address">
                     <input type="text" class="name-ipt input1" id="address_address" placeholder="请输入地址" value=""/>
                     <span class="modal-left">详细地址：</span>
@@ -68,6 +68,5 @@
         </div>
     </div>
 </div>
-<script src="{{static_url('js/area.js')}}"></script>
 <script src="{{static_url('js/market-address.js')}}"></script>
 {% end %}
