--- a/senguo.cc/admin/templates/fruitzone/payali.html
+++ b/senguo.cc/admin/templates/fruitzone/payali.html
@@ -17,7 +17,7 @@
         <div class="order-line">
             <div class="order-line-grade"></div>
             <div class="order-wawa">
-                <a href="tel:{{order.phone}}">
+                <a href="tel:{{order.sender_phone}}">
                     {% if order.status == -1%}
                     <img src="/static/images/TDSG.png" alt="配送员头像"/>
                     {% else %}
@@ -26,12 +26,12 @@
                 </a>
             </div>
             <div class="order-status-txt">
-                <span id="status-txt" data-id="{{order.status}}">配送中</span><a class="tel-btn" href="tel:{{order.phone}}">拨号</a>
+                <span id="status-txt" data-id="{{order.status}}">配送中</span><a class="tel-btn" href="tel:{{order.sender_phone}}">拨号</a>
             </div>
         </div>
     </div>
     <div class="order-item">
-        <h4 class="top-title"><a href="/{{shop_code}}"><span class="black-txt">{{shopName}}</span><span class="arr-right"></span><a href="tel:{{order.phone}}" class="contact-us fr tel-btn"><i class="i-contact"></i>联系卖家</a></a></h4>
+        <h4 class="top-title"><a href="/{{shop_code}}"><span class="black-txt">{{shopName}}</span><span class="arr-right"></span><a href="tel:{{shop_phone}}" class="contact-us fr tel-btn"><i class="i-contact"></i>联系卖家</a></a></h4>
         <ul class="goods-lst">
            {% if order.fruits %}
                 {% set fruits = eval(order.fruits) %}
