--- a/senguo.cc/admin/templates/customer/cart.html
+++ b/senguo.cc/admin/templates/customer/cart.html
@@ -99,25 +99,29 @@
             <div class="cartb-box">
                 <span class="left-title">配送方式</span>
                 <div class="right-title">
+                    {% if config.now_on == False and config.ontime_on == False and config.self_on == False %}<span class="red f14 no-deli">无配送方式</span>{% end %}
                     <ul class="bts-lst group bili_type">
-                        <li class="active" data-status="{{config.ontime_on}}">商家配送</li>
-                        <li data-status="{{config.self_on}}">用户自提</li>
+                        {% if config.now_on == True or config.ontime_on == True %}<li class="active" data-status="{{config.ontime_on or config.now_on}}">商家配送</li>{% end %}
+                        {% if config.self_on == True%}<li class="{% if config.now_on == False and config.ontime_on == False %}active{% end %}" data-status="{{config.self_on}}">用户自提</li>{% end %}
                     </ul>
                     <span class="red-tip-txt hidden">下单{{config.self_end_time}}分钟内不可自提</span>
+
                 </div>
             </div>
+            {% if config.now_on == True or config.ontime_on == True %}
             <div class="deli-box deli1">
                 <div class="cartb-box ptm5">
-                    <i class="i-more"></i>
+                    <i class="i-more i-more-ontime"></i>
                     <span class="left-title top4">收货时间</span>
                     <div class="right-title">
+                        <span class="red ontime_text hidden f14">已超过最晚配送时间</span>
                         <select class="select-slide" name="" id="deli_shop" data-id="0" data-type="0" data-time="0">
-                            {% if config.now_on == True%}
+                            {% if config.now_on == True %}
                             {% if now_periods == 1 %}
                             <option data-time="0" id="now_on_time" data-type="0" data-id="0" value="{{config.intime_period or 0}}分钟内送达 ({{config.start_time_now.strftime("%H:%M")}} ~ {{config.end_time_now.strftime("%H:%M")}})">{{config.intime_period or 0}}分钟内送达 ({{config.start_time_now.strftime("%H:%M")}} ~ {{config.end_time_now.strftime("%H:%M")}})</option>
                             {% end %}
                             {% end %}
-                            {% if config.ontime_on == True%}
+                            {% if config.ontime_on == True %}
                             {% if ontime_periods %}
                                 {% if config.day_on_time==1 or config.day_on_time==0 %}
                                 {% for period in ontime_periods %}
@@ -136,14 +140,15 @@
                 </div>
                 <p class="red-txt shop-deli hidden">该方式要满<span id="min_charge">50</span>元才能配送哦</p>
             </div>
-            <div class="deli-box deli2 hidden">
+            {% end %}
+            {% if config.self_on == True%}
+            <div class="deli-box deli2 {% if config.now_on == True or config.ontime_on == True %}hidden{% end %}">
                 <div class="cartb-box ptm5">
-                    <i class="i-more"></i>
+                    <i class="i-more i-more-self"></i>
                     <span class="left-title top4">自提时间</span>
                     <div class="right-title">
-                        <!--<span class="c333 select-time f14">12:40-13:10</span>-->
+                        <span class="red self_text hidden f14">已超过最晚自提时间</span>
                         <select class="select-slide" name="" id="deli_self" data-id="0" data-time="0">
-                            {% if config.self_on == True%}
                             {% if self_periods %}
                             {% if config.day_self==1 or config.day_self==0 %}
                             {% for period in self_periods %}
@@ -156,7 +161,6 @@
                             {% end %}
                             {% end %}
                             {% end %}
-                            {% end %}
                         </select>
                     </div>
                 </div>
@@ -165,17 +169,16 @@
                     <span class="left-title top4">自提地点</span>
                     <div class="right-title clip">
                         <select class="select-slide" name="" id="deli_self_address" data-id="0">
-                        {% if config.self_on == True%}
                         {% if self_address_list %}
                         {% for address in self_address_list %}
                         <option data-id="{{address.id}}" value="{{address.address}}">{{address.address}}</option>
-                        {% end %}
                         {% end %}
                         {% end %}
                         </select>
                     </div>
                 </div>
             </div>
+            {% end %}
         </div>
         {% if coupon_number>0 %}
         <div class="mt10 coupon-cart-box pointer">
@@ -220,6 +223,9 @@
                     <a href="javascript:;" url="{{reverse_url('customerBalance')}}?shop_id={{shop_id}}" class="a-cz pull-right f14" data-auth="{{show_balance}}" data-status="{{config.balance_on_active}}">充值</a>
                     <span class="c333 f14">当前余额</span>
                     <span class="c333 f14 ml10">￥{{balance_value}}元</span>
+                </div>
+                <div class="wrap-cash-box hidden">
+                    <span class="c333 f14">先下单，收到商品时付款</span>
                 </div>
             </div>
         </div>
