--- a/senguo.cc/admin/static/css/seckill.css
+++ b/senguo.cc/admin/static/css/seckill.css
@@ -20,7 +20,7 @@ body{background-color: #f5f5f5;}
 .time-status{display: inline-block;color: #fff;height: 16px;line-height:16px;padding: 0 4px;border-radius: 6px;background-color: #FF9800;}
 .no-seckill-time .time-status{background-color: #59D5AA;}
 .nm-list{padding: 0 10px;background-color: #fff;}
-.nm-list>li{padding: 2px 0;border-bottom: 1px solid #e7e7e7;}
+.nm-list>li{padding: 5px 0;border-bottom: 1px solid #e7e7e7;}
 .nm-list>li:last-child{border-bottom: none;}
 .nm-dl{position: relative;min-height: 70px;}
 .nm-dl>dt{height: 70px;width: 70px;position: absolute;left: 0;top: 0;}
@@ -81,6 +81,7 @@ body{background-color: #f5f5f5;}
     .go-cart{right: 50%;margin-right: -350px;}
 }
 .src-txt{display: inline-block;color: #999;font-size: 12px;text-decoration: line-through;}
+.charge-unit{color: #999;font-size: 12px;}
 .seckill-src-txt{position: absolute;left: 80px;top: 30px;}
 
 
