--- a/senguo.cc/admin/static/css/beauty/center.css
+++ b/senguo.cc/admin/static/css/beauty/center.css
@@ -9,6 +9,7 @@
 .male{color:deepskyblue;}
 .female{color:hotpink;}
 .info{background:#dcedd8;margin-top:20px !important;color: #999;}
+.info2{padding-top:20px;color: #999;}
 .property{background:#fff;}
 .property a{position:relative;z-index:999;}
 
