--- a/senguo.cc/admin/templates/beauty/personal-center.html
+++ b/senguo.cc/admin/templates/beauty/personal-center.html
@@ -8,7 +8,7 @@
     <!-- <div class="rainshed2 text-center font18 text-white bg_change fix-title"></div> -->
     <div class="user-info box-style clearfix font16 text-center">
         <a href="{{reverse_url('customerProfile')}}" class="user-img text-white">
-            <div class="info2 mt5">
+            <div class="info2">
                     <p class="text-center mt5">
                         <span>{{current_user.accountinfo.nickname}}</span>
                         <span data-id="{{current_user.accountinfo.sex}}" class="user-sex  font14"></span>
