--- a/senguo.cc/admin/templates/m-admin/shop-list.html
+++ b/senguo.cc/admin/templates/m-admin/shop-list.html
@@ -29,7 +29,7 @@
                         <ul class="shop-prop group mt6">
                             <li>商品<span>{{shop['goods_count']}}</span>件</li>
                             <li>评价<span>{{shop['comment_count']}}</span>条</li>
-                            <li>满意度<span>{{shop['satisfy']}}</span></li>
+                            <li>满意度<span>{{shop['shop_satisfy']}}</span></li>
                             <li>粉丝<span>{{shop['fans_sum']}}</span>个</li>
                             <li>订单<span>{{shop['order_sum']}}</span>个</li>
                             <li>营业额<span>{{shop['total_money'] or 0}}</span>元</li>
@@ -64,7 +64,7 @@
                         <ul class="shop-prop group mt6">
                             <li>商品<span>{{shop['goods_count']}}</span>件</li>
                             <li>评价<span>{{shop['comment_count']}}</span>条</li>
-                            <li>满意度<span>{{shop['satisfy']}}</span></li>
+                            <li>满意度<span>{{shop['shop_satisfy']}}</span></li>
                             <li>粉丝<span>{{shop['fans_sum']}}</span>个</li>
                             <li>订单<span>{{shop['order_sum']}}</span>个</li>
                             <li>营业额<span>{{shop['total_money'] or 0}}</span>元</li>
