--- a/senguo.cc/admin/static/css/market-cart.css
+++ b/senguo.cc/admin/static/css/market-cart.css
@@ -133,6 +133,7 @@
 .dilivery-box{background-color: #fff;padding-left: 10px;padding-top: 10px;}
 .cartb-box{padding: 0 0 8px 70px;position: relative;min-height: 38px;}
 .left-title{display: inline-block;width: 70px;height: 33px;font-size:14px;line-height: 32px;color: #333;position: absolute;left: 0;top: 0;}
+.left-title-line{display: inline-block;width: 70px;height: 4px;background-color: #fff;position: absolute;left: 0;top: -4px;}
 .ptm5{padding: 10px 0 10px 70px;border-top: 1px solid #e7e7e7;}
 .bt0{border-top: none !important;}
 .bts-lst>li{float:left;margin-right:10px;border-radius:4px;cursor: pointer;width: 70px;height: 32px;line-height:31px;-webkit-box-sizing:border-box;border: 1px solid #a8a8a8;text-align: center;font-size: 14px;color: #333;}
@@ -164,6 +165,8 @@
 .modal-footer .btn-left{left: 40px;color: #333;background-color: #ddd !important;}
 .modal-footer .btn-right{left: 154px;}
 .no-deli{display: inline-block;margin-top: 6px;}
+.b0{bottom: 0 !important;}
+.pm40{padding-bottom: 40px !important;}
 /*beauty*/
 .yellow-text{color: #ff9800;}
 .pay-bill{position: fixed;bottom:50px;width:100%;max-width:800px;min-width:320px;z-index:100;height: 40px;border-top:1px solid #eee;line-height: 40px;text-align: right;font-size: 14px;background-color: rgba(255,255,255,.8);color: #666;left: 50%;-webkit-transform:translate(-50%,0);}
