--- a/senguo.cc/admin/templates/customer/cart.html
+++ b/senguo.cc/admin/templates/customer/cart.html
@@ -169,8 +169,9 @@
                         </select>
                     </div>
                 </div>
-                <div class="cartb-box ptm5 bt0">
+                <div class="cartb-box ptm5">
                     <i class="i-more"></i>
+                    <span class="left-title-line"></span>
                     <span class="left-title top4">自提地点</span>
                     <div class="right-title clip">
                         <select class="select-slide" name="" id="deli_self_address" data-id="0">
