--- a/senguo.cc/admin/templates/customer/discover.html
+++ b/senguo.cc/admin/templates/customer/discover.html
@@ -20,7 +20,7 @@
     {% if coupon_active_cm==1%}
     {% if a or b %}
     <li class="title clearfix bg-white font14 coupon">
-        <a href="{% if a==0%}/coupon/profile?action=get_one&coupon_id=-1{% else %}/coupon/profile?action=get_all{% end %}" class="text-grey3 confess-wall">
+        <a href="{% if a==0%}/coupon/profile?action=get_one&coupon_id=-1&shop_id={{shop_id}}{% else %}/coupon/profile?action=get_all&shop_id={{shop_id}}{% end %}" class="text-grey3 confess-wall">
             <span class="pull-right imore"></span>
             <i class="pull-left"></i>
             <span class="pull-left confess-text">优惠券<span class="font12 text-grey ml6">{% if a== 0%}更多优惠券等你来抢{% else %}{{a}}批优惠券等你来抢{% end %}</span></span>
