--- a/senguo.cc/admin/static/bbs/css/main.css
+++ b/senguo.cc/admin/static/bbs/css/main.css
@@ -38,7 +38,7 @@ body{background-color: #f3f3f3;overflow-x: hidden;max-width: 800px;min-width: 32
 .search-icon{position: absolute;right: 16px;top:13px;width: 20px;height: 20px;background: url('/static/bbs/img/icon_search.png') no-repeat center center;background-size: 18px;}
 .atical-list>li{padding: 10px;position: relative;}
 .atical-list>li:after{content: '';display: block;position: absolute;width: 100%;left: 0;bottom: 0;height: 1px;background-color: #dadada;-webkit-transform: scaleY(0.5);transform: scaleY(0.5);}
-.atical-list .title{color: #333;line-height: 24px;cursor: pointer;}
+.atical-list .title{color: #333;line-height: 24px;cursor: pointer;font-size: 15px;}
 .atical-mark{display: inline-block;height: 16px;line-height: 16px;font-size:12px;margin-right:3px;position:relative;top:-2px;left:-3px;padding: 0 10px;border: 1px solid #4ab89e;color: #4ab89e;border-radius: 9px;transform: scale(0.9);-webkit-transform: scale(0.9);}
 .atical-attr{margin-top: 8px;color: #999;font-size: 13px;}
 .atical-attr>span{display: inline-block;}
@@ -56,14 +56,14 @@ body{background-color: #f3f3f3;overflow-x: hidden;max-width: 800px;min-width: 32
 .wrap-publish-title{background-color: #fff;height: 36px;padding-left: 90px;position: relative;}
 .title-left{width: 86px;position: absolute;left:0;top:0;height: 36px;height: 36px;-webkit-box-sizing: border-box;padding-left: 10px;border-right:1px solid #e7e7e7;}
 .post-box{background-color: #fff;padding: 10px 15px;}
-.post-title{line-height: 1.4;font-size: 18px;color: #333;font-weight: 400;}
-.post-2title{color: #999;white-space: nowrap;overflow: hidden;}
-.post-2title .author{color: #999;margin-right: 6px;display: inline-block;max-width: 100px;vertical-align: middle;}
-.post-cont{line-height: 1.6;color: #333;padding: 20px 0;}
+.post-title{line-height: 1.4;font-size: 22px;color: #333;font-weight: 400;}
+.post-2title{height: 18px; color: #999;white-space: nowrap;overflow: hidden;}
+.post-2title .author{color: #999;margin-right: 6px;max-width: 100px;}
+.post-cont{line-height: 1.6;color: #333;padding: 25px 0;font-size: 15px;}
 .post-attr{margin-bottom: 5px;}
 .post-attr .dianzan{margin-left: 7px;}
 .post-attr .comment{margin-left: 10px;}
-.wrap-comment{background-color: #f3f3f3;padding: 15px;position: relative;}
+.wrap-comment{background-color: #f3f3f3;padding: 15px;position: relative;font-size: 15px;}
 .wrap-comment:before{content: '';display: block;position: absolute;width: 100%;left: 0;top: 0;height: 1px;background-color: #e5e5e5;-webkit-transform: scaleY(0.5);transform: scaleY(0.5);}
 .comment-list>li{padding: 10px 0;}
 .comment-item{position: relative;padding-left: 42px;}
