--- a/senguo.cc/admin/static/css/market-home.css
+++ b/senguo.cc/admin/static/css/market-home.css
@@ -93,8 +93,7 @@
 .type-choose{height:auto;overflow:hidden;padding:10px 20px 10px;margin-top:-10px;width:101%;background:#f0f4f0;}
 .type-choose li{height:40px;line-height:40px;width:32%;margin-right:1%;border-radius:4px;margin-top:10px;}
 
-.detail-box{}
-.detail-box .detail{padding:10px 5px 30px;}
+.detail{padding:10px 5px 30px;}
 
 .classify-title{height:40px;line-height:40px;}
 .modal-body{padding:0 !important;}
