--- a/senguo.cc/admin/static/m-admin/css/main.css
+++ b/senguo.cc/admin/static/m-admin/css/main.css
@@ -37,7 +37,7 @@
 .tab-bm-list>li{width: 50%;float: left;border-top: 1px solid #e7e7eb;}
 .tab-bm-list>li>a{display: block;height: 48px;color: #666;}
 .tab-bm-list>li i{height: 22px;background-size:24px;background-position: center center;margin-top: 6px;}
-.tab-bm-list>li span{display: block;font-size: 12px;text-align: center;position: relative;top: -16px;line-height: 14px;margin-top: 2px;}
+.tab-bm-list>li span{display: block;font-size: 12px;text-align: center;position: relative;top: -16px;line-height: 14px;margin-top: 2px;max-width: 100%;}
 .ic-shop{background-image: url('/static/m-admin/img/icon_shop.png');}
 .tab-bm-list .active .ic-shop{background-image: url('/static/m-admin/img/icon_shop_active.png');}
 .ic-bbs{background-image: url('/static/m-admin/img/icon_bbs.png');margin-left: 4px;}
