--- a/senguo.cc/admin/templates/fruitzone/paywx.html
+++ b/senguo.cc/admin/templates/fruitzone/paywx.html
@@ -174,6 +174,7 @@
                                     window.location.href = '/notice/success';
                                 },
                                 fail:function(){
+                                    $this.attr({"data-sta":""});
                                      //  $.ajax({
                                      //     url:"/customer/wxpayCallBack",
                                      //     type:"get",
