--- a/senguo.cc/admin/templates/mbbs/artical-detail.html
+++ b/senguo.cc/admin/templates/mbbs/artical-detail.html
@@ -22,7 +22,7 @@
                 <a href="{{reverse_url('BbsDetailEdit',article['id'])}}" class="fr c999 mr10">编辑</a>
                 {% end %}
             {% end %}
-            <span class="wrap-icon people-see"><i class="icon-see"></i><span class="num">{{article["scan_num"]}}</span></span>
+            <span class="wrap-icon people-see fr"><i class="icon-see"></i><span class="num">{{article["scan_num"]}}</span></span>
             <span class="wrap-icon dianzan article-great add-great ml0" data-id='{{article["id"]}}'><i class="icon-dz {% if article['great_if'] == True %}icon-dz-active{% end %}"></i><span class="num">{{article["great_num"]}}</span></span>
             <a href="javascript:;" class="wrap-icon comment com-atical" data-id='{{article["id"]}}'><i class="icon-com"></i><span class="num">{{article["comment_num"]}}</span></a>
         </div>
