--- a/senguo.cc/admin/templates/admin/orders.html
+++ b/senguo.cc/admin/templates/admin/orders.html
@@ -381,6 +381,7 @@
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
             </div>
             <div class="modal-body set-width-float">
+                <p class="text-red del-notice hide">该订单会被删除，并且订单金额会被退至用户的原账户</p>
         	    <input type="text" id="order_ser_val"/>
             </div>
             <div class="modal-footer">
