--- a/senguo.cc/admin/templates/customer/cart.html
+++ b/senguo.cc/admin/templates/customer/cart.html
@@ -95,7 +95,7 @@
                     {% set index=index+1 %}
                     {% end %}
                 </ul>
-                <span class="i-more c333">共{{len(cart_f)}}件</span>
+                <span class="i-more c333">共<span id="fruits_num">{{len(cart_f)}}</span>件</span>
             </div>
             <div class="wrap-say-ipt">
                 <input id="messageCon" class="message-input input-sty box-style center-block font14 bg-white bg-grey" type="text" value="" placeholder="留个言调戏下客服吧？(⊙_⊙)">
