--- a/senguo.cc/admin/templates/m-admin/shop-profile.html
+++ b/senguo.cc/admin/templates/m-admin/shop-profile.html
@@ -9,7 +9,63 @@
     <a href="{{reverse_url('customerProfile')}}" class="head-right profile-center"><em></em></a>
 </div>
 <div class="header head_tab hide">
-    <a href="javascript:;" class="back bbs-menu" id="bbs-menu">所有版块</a>
+    <a href="javascript:;" class="back bbs-menu" id="bbs-menu"></a>
+    <span id="title">森果社区</span>
+    <a href="javascript:;" url="/bbs/publish" class="right-icons publish-article"></a>
+    <a href="javascript:;" url="/bbs/profile" class="right-icons profile-centers">
+        {% if handler.getNoticeNumber>0 %}<i class="stat-tip">{{handler.getNoticeNumber}}</i>{% end %}
+    </a>
+    <div class="wrap-menu-list h0">
+        <div class="wrap-search-box">
+            <i class="search-icon" id="search_btn"></i>
+            <input type="text" placeholder="请输入文章标题" class="search-article" id="search_bbs"/>
+        </div>
+        <ul class="menu-list group">
+            <li class="active bl0" data-id="100">
+                <i class="menu-icon m1"></i>
+                <span>首页</span>
+                <i class="cover-px cover-left"></i>
+            </li>
+            <li class="bl0" data-id="0">
+                <i class="menu-icon m2"></i>
+                <span>官方公告</span>
+            </li>
+            <li class="bl0 br0" data-id="1">
+                <i class="menu-icon m3"></i>
+                <span>产品更新</span>
+                <i class="cover-px cover-right"></i>
+            </li>
+            <li class="bl0 bt0" data-id="2">
+                <i class="menu-icon m4"></i>
+                <span>运营干货</span>
+                <i class="cover-px cover-left"></i>
+            </li>
+            <li class="bl0 bt0" data-id="3">
+                <i class="menu-icon m5"></i>
+                <span>水果百科</span>
+            </li>
+            <li class="bl0 br0 bt0" data-id="4">
+                <i class="menu-icon m6"></i>
+                <span>使用教程</span>
+                <i class="cover-px cover-right"></i>
+            </li>
+            <li class="bl0 bt0" data-id="5">
+                <i class="menu-icon m7"></i>
+                <span>水果供求</span>
+                <i class="cover-px cover-left"></i>
+            </li>
+            <li class="bl0 bt0" data-id="6">
+                <i class="menu-icon m8"></i>
+                <span>森果前沿</span>
+            </li>
+            <li class="bl0 br0 bt0" data-id="7">
+                <i class="menu-icon m9"></i>
+                <span>用户交流</span>
+                <i class="cover-px cover-right"></i>
+            </li>
+        </ul>
+    </div>
+    <!--<a href="javascript:;" class="back bbs-menu" id="bbs-menu">所有版块</a>
     <span>森果社区</span>
     <a href="{{reverse_url('BbsSearch')}}" class="head-right search"><em></em></a>
     <div class="wrap-menu-list h0">
@@ -22,7 +78,7 @@
             <li data-id="5">水果供求</li>
             <li data-id="6">森果前沿</li>
         </ul>
-    </div>
+    </div>-->
 </div>
 {% end %}
 {% block content %}
