--- a/senguo.cc/admin/static/css/admin-global.css
+++ b/senguo.cc/admin/static/css/admin-global.css
@@ -232,6 +232,7 @@ img{border:none;}
 .set-right20{margin-right:20px;}
 .set-left20{margin-left:20px;}
 .mb-0{margin-bottom:0;}
+.mb-5{margin-bottom:5px;}
 .mb-15{margin-bottom:15px;}
 .mr-10{margin-right:10px;}
 .ml10{margin-left:10px;}
