--- a/senguo.cc/admin/templates/admin/order-list.html
+++ b/senguo.cc/admin/templates/admin/order-list.html
@@ -17,10 +17,10 @@
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
             </div>
             <div class="modal-body set-width-float">
-                 <p class="text-red del-notice hide">该订单会被删除，并且订单金额会被退至用户的原账户</p>
+                <p class="text-pink del-notice hide mb5">注意：该订单会被删除，并且订单金额会退还给用户支付的账户</p>
                 <input type="text" id="order_ser_val"/>
     	    </div>
-             <div class="modal-footer">
+            <div class="modal-footer">
                 <div class="btn-box">
                     <button type="button" class="pull-right modal-concel-btn" href="javascript:;" data-dismiss="modal">取消</button>
                     <button type="button" class="pull-left modal-sure-btn" href="javascript:;">确认</button>
