--- a/senguo.cc/admin/static/css/admin-order.css
+++ b/senguo.cc/admin/static/css/admin-order.css
@@ -166,7 +166,7 @@
 .height30{height:30px;line-height:30px;}
 
 .sender_img{width:14px;height:14px;border-radius:50%;}
-.send-staff-list{width:100%;max-width:650px;clear:both;}
+.send-staff-list{width:100%;max-width:650px;clear:both;cursor:pointer;}
 .send-staff-list li{border:1px solid #fff;width:100%;clear:both;padding:5px 10px;height:50px;line-height:40px;}
 .send-staff-list li.active{border:1px solid #44b549;}
 .send-staff-list li .sub-img{width:40px;height:40px;border-radius:50%;float:left}
