--- a/senguo.cc/admin/templates/superAdmin/shop-cert-apply.html
+++ b/senguo.cc/admin/templates/superAdmin/shop-cert-apply.html
@@ -34,8 +34,8 @@
                 <li class=".clip">管理员：<a href="{{reverse_url('superUser')}}?out_link=true&&data_id={{list.shop.admin.accountinfo.id}}" target="_blank" title="点击查看用户详细信息">{{list.shop.admin.accountinfo.realname}}</a></li>
                 <li class=".clip">申请时间：<span>{{list.create_time}}</span></li>
                 <li class=".clip">认证类型：<span>企业认证</span></li>
-                <li class=".clip">企业名称：<span>{{list.company_name}}</span></li>
-                <li class=".clip">企业法人：<span>{{list.realname}}</span></li>
+                <li class=".clip">企业名称：<span>{{list.realname}}</span></li>
+                <li class=".clip">企业法人：<span>{{list.company_name}}</span></li>
             </ul>
             <ul class="cert-person group">
                 <li class="left">
