--- a/senguo.cc/admin/templates/mbbs/main.html
+++ b/senguo.cc/admin/templates/mbbs/main.html
@@ -11,10 +11,25 @@
 {% end %}
 {% block content %}
 <div class="wrap-main">
+    <div class="classify-top group">
+        <div class="classify-icon">
+            <i class="menu-icon menu_icon_area m1"></i>
+        </div>
+        <div class="classify-txts">
+            <p class="dgreen f14 classify_title">首页</p>
+            <p class="c666 mt4 f12 classify_cont">森果社区所有文章</p>
+        </div>
+    </div>
     <ul class="atical-list">
 
     </ul>
     <p class="loading txt-center c999 mt10"></p>
+</div>
+<div class="bm-tab header">
+    <ul class="tab-bm-list group">
+        <li class=""><a href="javascript:;"><i class="box-icon ic-shop ic-shop-active"></i><span>店铺</span></a></li>
+        <li class="active"><a href="javascript:;"><i class="box-icon ic-bbs"></i><span>社区</span></a></li>
+    </ul>
 </div>
 <div class="wrap-loading-box hide">
     <div class="loading-box">
