--- a/senguo.cc/admin/templates/mbbs/publish.html
+++ b/senguo.cc/admin/templates/mbbs/publish.html
@@ -2,9 +2,9 @@
 {% block title %}森果社区-发布帖子{% end %}
 {% block head %}
 <link href="/static/js/ueditor/themes/default/css/umeditor.min.css" type="text/css" rel="stylesheet">
-<link href="/static/css/mobi/mobiscroll.core-2.5.2.css" type="text/css" rel="stylesheet">
+<!--<link href="/static/css/mobi/mobiscroll.core-2.5.2.css" type="text/css" rel="stylesheet">
 <link href="/static/css/mobi/mobiscroll.animation-2.5.2.css" type="text/css" rel="stylesheet">
-<link href="/static/css/mobi/mobiscroll.android-ics-2.5.2.css" type="text/css" rel="stylesheet">
+<link href="/static/css/mobi/mobiscroll.android-ics-2.5.2.css" type="text/css" rel="stylesheet">-->
 {% end %}
 {% block header %}
 <div class="header">
@@ -33,7 +33,7 @@
             </script>
         </div>
     </div>
-    <p class="c999 title-row"><span class="must">*</span>必选</p>
+    {#<p class="c999 title-row"><span class="must">*</span>必选</p>
     <ul class="check-items publish-checks">
         <li class="{% if edit %}{% if article_data['status'] == 1%}active{% end %}{% end %}" data-id="1">
             <span class="fr check-box checked"></span>
@@ -59,20 +59,21 @@
             <span class="fr check-box"></span>
             <span>回帖仅作者可见</span>
         </li>
-    </ul>
+    </ul>#}
 </div>
 <div class="pop-win pop-reply hide">
     <div class="pop-content plr0">
         <div class="board-box">
             <p class="title">选择版块</p>
             <ul class="board-list">
-                <li class="active" data-id="0"><span class="tit c333">官方公告</span><span>森果官方公告和通知</span></li>
-                <li data-id="1"><span class="tit c333">产品更新</span><span>新功能发布和bug修复</span></li>
-                <li data-id="2"><span class="tit c333">运营干货</span><span>分享运营经验</span></li>
-                <li data-id="3"><span class="tit c333">水果百科</span><span>水果相关知识百科</span></li>
-                <li data-id="4"><span class="tit c333">使用教程</span><span>产品功能的使用说明</span></li>
-                <li data-id="5"><span class="tit c333">水果供求</span><span>水果采购与供货信息</span></li>
-                <li data-id="6"><span class="tit c333">森果前沿</span><span>分享互联网o2o前沿信息</span></li>
+                <li class="active {% if if_admin==False %}hide{% end %}" data-id="0"><span class="tit c333">官方公告</span><span>森果官方公告和通知</span></li>
+                <li class="{% if if_admin==False %}hide{% end %}" data-id="1"><span class="tit c333">产品更新</span><span>新功能发布和bug修复</span></li>
+                <li class="{% if if_admin==False %}hide{% end %}" data-id="2"><span class="tit c333">运营干货</span><span>分享运营经验</span></li>
+                <li class="{% if if_admin==False %}hide{% end %}" data-id="3"><span class="tit c333">水果百科</span><span>水果相关知识百科</span></li>
+                <li class="{% if if_admin==False %}hide{% end %}" data-id="4"><span class="tit c333">使用教程</span><span>产品功能的使用说明</span></li>
+                <li class="{% if if_admin==False %}hide{% end %}" data-id="5"><span class="tit c333">水果供求</span><span>水果采购与供货信息</span></li>
+                <li class="{% if if_admin==False %}hide{% end %}" data-id="6"><span class="tit c333">森果前沿</span><span>分享互联网o2o前沿信息</span></li>
+                <li data-id="7"><span class="tit c333">用户交流</span><span>与他人交流运营心得</span></li>
             </ul>
             <div class="wrap-btns board-btns">
                 <a href="javascript:;" class="ok-btn type-sure">确定</a>
@@ -92,10 +93,10 @@
 <script src="/static/js/ueditor/lang/zh-cn/zh-cn.js"></script>
 <script src="/static/js/qiniu.min.js"></script>
 <script src="/static/js/plupload/plupload.full.min.js"></script>
-<script src="/static/js/third/mobi/mobiscroll.core-2.5.2.js"></script>
+<!--<script src="/static/js/third/mobi/mobiscroll.core-2.5.2.js"></script>
 <script src="/static/js/third/mobi/mobiscroll.core-2.5.2-zh.js"></script>
 <script src="/static/js/third/mobi/mobiscroll.datetime-2.5.1.js"></script>
 <script src="/static/js/third/mobi/mobiscroll.datetime-2.5.1-zh.js"></script>
-<script src="/static/js/third/mobi/mobiscroll.android-ics-2.5.2.js"></script>
+<script src="/static/js/third/mobi/mobiscroll.android-ics-2.5.2.js"></script>-->
 <script src="{{static_url('bbs/js/publish.js')}}"></script>
 {% end %}
