--- a/senguo.cc/admin/static/bbs/css/reset.css
+++ b/senguo.cc/admin/static/bbs/css/reset.css
@@ -76,12 +76,14 @@ textarea{width: 100%;border: none;overflow: hidden;resize: none;}
 .pt5{padding-top: 5px;}
 .pm10{padding-bottom: 10px;}
 .pm20{padding-bottom: 20px;}
+.pm40{padding-bottom: 40px !important;}
 .ptm6{padding: 6px 0;}
 .pt10{padding-top: 10px !important;}
 .pt30{padding-top: 30px;}
 .pt70{padding-top: 70px !important;}
 .pm80{padding-bottom: 80px;}
 .mt0{margin-top: 0!important;}
+.mt-1{margin-top: -1px !important;}
 .mt2{margin-top: 2px;}
 .mt4{margin-top: 4px;}
 .mt6{margin-top: 6px;}
