--- a/senguo.cc/admin/templates/bbs/publish.html
+++ b/senguo.cc/admin/templates/bbs/publish.html
@@ -30,10 +30,10 @@
                     <ul class="type-lst classify_type">
                         <li class="{% if if_admin==False %}hide{% end %}" data-id="0">官方公告</li>
                         <li class="{% if if_admin==False %}hide{% end %}" data-id="1">产品更新</li>
-                        <li data-id="2">运营干货</li>
-                        <li data-id="3">水果百科</li>
+                        <li class="{% if if_admin==False %}hide{% end %}" data-id="2">运营干货</li>
+                        <li class="{% if if_admin==False %}hide{% end %}" data-id="3">水果百科</li>
                         <li class="{% if if_admin==False %}hide{% end %}" data-id="4">使用教程</li>
-                        <li data-id="5">水果供求</li>
+                        <li class="{% if if_admin==False %}hide{% end %}" data-id="5">水果供求</li>
                         <li class="{% if if_admin==False %}hide{% end %}" data-id="6">森果前沿</li>
                         <li data-id="7">用户交流</li>
                     </ul>
