--- a/senguo.cc/admin/templates/mbbs/main.html
+++ b/senguo.cc/admin/templates/mbbs/main.html
@@ -25,12 +25,14 @@
     </ul>
     <p class="loading txt-center c999 mt10"></p>
 </div>
+{% if if_saler %}
 <div class="bm-tab header">
     <ul class="tab-bm-list group">
         <li class=""><a href="javascript:;"><i class="box-icon ic-shop ic-shop-active"></i><span>店铺</span></a></li>
         <li class="active"><a href="javascript:;"><i class="box-icon ic-bbs"></i><span>社区</span></a></li>
     </ul>
 </div>
+{% end %}
 <div class="wrap-loading-box hide">
     <div class="loading-box">
         <div class="loader">
