--- a/senguo.cc/admin/templates/mbbs/artical-detail.html
+++ b/senguo.cc/admin/templates/mbbs/artical-detail.html
@@ -7,11 +7,16 @@
 <a href="javascript:;" url="/bbs/publish" class="right-icons publish-article hide"></a>
 {% end %}
 {% block content %}
+<style>
+    .post-cont img{max-width: 100% !important;}
+    .post-cont>fieldset,.post-cont>section{width: 100% !important;}
+    .post-cont fieldset,.post-cont section{max-width: 100% !important;}
+</style>
 <input type="hidden" value="{{author_if}}" id="author_if"/>
 <div class="wrap-post pm20" data-id="{{article['id']}}">
     <div class="post-box">
         <h3 class="post-title">{{article["title"]}}</h3>
-        <p class="post-2title mt10 c999"><span class="topic-class detail-type">{{article["type"]}}</span><span class="author clip c999">{{article["time"]}}</span>@{{article["nickname"]}}</p>
+        <p class="post-2title mt10 c999"><a href="/bbs?id=" class="topic-class detail-type">{{article["type"]}}</a><span class="author clip c999">{{article["time"]}}</span>@{{article["nickname"]}}</p>
         <div class="post-cont">
             {% raw article["article"] %}
         </div>
